# AUTOMATED-DATA-PIPELINE

./: .gitignore  LICENSE  README.md  product_codes.txt  pyproject.toml  requirements.txt  start.bat
.github/workflows/: ci.yml
config/: settings.yaml
database/: scraper.db
src/: __init__.py  definitions.py  main.py
src/analysis/: main.py
src/analysis/analyzers/: advanced.py  behavior.py  correlation.py  dashboard.py  marketplace.py  outlier.py  segmentation.py  volatility.py
src/analysis/core/: base_analyzer.py  chart_config.py  data_loader.py
src/analysis/utils/: formatters.py
src/core/: __init__.py  config.py  exceptions.py  logger.py  selector_usage.py
src/engine/: __init__.py  batch_processor.py  browser.py
src/models/: __init__.py  product.py
src/services/: __init__.py  database.py  detail_scraper.py  scraper_service.py  search_service.py  seller_extractor.py
src/tasks/: __init__.py  create_profile.py  seed_targets.py
src/utils/: __init__.py  string_utils.py  time_utils.py
src/web/: __init__.py  app.py  routes.py  schemas.py
src/web/repositories/: __init__.py  product_repository.py
src/web/services/: __init__.py  dashboard_analytics_service.py
src/web/static/css/: dashboard.css
src/web/static/js/: dashboard-api.js  dashboard-app.js  dashboard-charts.js
src/web/templates/: base.html  dashboard.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_browser.py
tests/unit/: __init__.py  test_batch_processor.py  test_browser.py  test_create_profile.py  test_dashboard_analytics_service.py  test_database.py  test_detail_scraper.py  test_main.py  test_product_dto.py  test_product_repository.py  test_scraper_service.py  test_search_service.py  test_seed_targets.py  test_seller_extractor.py  test_string_utils.py  test_web_routes.py
